Tabla de precios
[New]
Agregada la tabla de precios para las clases a domicilio.

--- a/home.html
+++ b/home.html
@@ -134,40 +134,42 @@
     <div class="row" data-equalizer data-equalize-on="small">
       <div class="column small-10 medium-4">
         <ul class="pricing-table no-bullet text-center">
+          <li></li>
           <li class="title">Básico</li>
           <li class="price">$180.000</li>
           <li class="month">Pesos al mes</li>
-          <li><i class="fi-check"></i> 4 Clases de guitarra</li>
-          <li><i class="fi-check"></i> Lecciones a domicilio</li>
-          <li><i class="fi-check"></i> 2 Video respuestas</li>
-          <li><i class="fi-x"></i></li>
+          <li class="lessons"> 4 Clases de guitarra</li>
+          <li> Lecciones a domicilio</li>
+          <li> 2 Video respuestas</li>
+
           <li><a class="button" href="#">Compra el plan</a></li>
         </ul>
       </div>
 
       <div class="column small-6 medium-4">
-        <ul class="pricing-table no-bullet text-center">
+        <ul class="pricing-table no-bullet text-center pricing-star">
           <li class="title">Pro</li>
           <li class="price">$320.000</li>
           <li class="month">Pesos al mes</li>
-          <li><i class="fi-check"></i> 8 Clases de guitarra</li>
-          <li><i class="fi-check"></i> Lecciones a domicilio</li>
-          <li><i class="fi-check"></i> 6 Video respuestas</li>
-          <li><i class="fi-check"></i> Material de estudio</li>
+          <li class="lessons"> 8 Clases de guitarra</li>
+          <li> Lecciones a domicilio</li>
+          <li> 6 Video respuestas</li>
+          <li> Material de estudio</li>
           <li><a class="button" href="#">Compra el plan</a></li>
         </ul>
       </div>
 
       <div class="column small-6 medium-4">
         <ul class="pricing-table no-bullet text-center">
-          <li class="title">Pro</li>
+          <li></li>
+          <li class="title">Premium</li>
           <li class="price">$630.000</li>
           <li class="month">Pesos al mes</li>
-          <li><i class="fi-check"></i> 16 Clases de guitarra</li>
-          <li><i class="fi-check"></i> Lecciones a domicilio</li>
-          <li><i class="fi-check"></i> 8 Video respuestas</li>
-          <li><i class="fi-check"></i> Material de estudio</li>
-          <li><a class="button " href="#">Compra el plan</a></li>
+          <li class="lessons"> 16 Clases de guitarra</li>
+          <li> Lecciones a domicilio</li>
+          <li> 8 Video respuestas</li>
+          <li> Material de estudio</li>
+          <li><a class="button buy" href="#">Compra el plan</a></li>
         </ul>
       </div>
 
