Landing Brain Sessions Clases de guitarra DESKTOP
Esta lista la versión de escritorio en un 90%

--- a/home.html
+++ b/home.html
@@ -8,6 +8,7 @@
 
     <link rel="stylesheet" href="icons/foundation-icons.css">
     <link rel="stylesheet" href="css/foundation.css">
+    <link rel="stylesheet" href="css/jquery.bxslider.css">
     <link rel="stylesheet" href="css/app.css">
   </head>
   <body>
@@ -24,12 +25,12 @@
   <!-- Menu -->
   <header id="menu-content" class="container">
     <div class="callout row">
-      <div class="large-3 columns">
+      <div class="medium-3 columns">
           <h2><img src="img/brainsessions-logo.svg" alt="logo Brain Sessions"></h2>
       </div>
 
       <nav>
-        <ul class="menu large-9 columns align-right">
+        <ul class="menu medium-9 columns align-right">
           <li><a href="tel:+573197954046" class="button"><i class="fi-telephone"></i>319 795 4046</a></li>
           <li><a href="/blog">Blog</a></li>
           <li><a href="#prices-content">Precios</a></li>
@@ -44,17 +45,17 @@
 <!-- Copy-->
 <article id="copy" class="container">
   <div class="row">
-    <h1 class="large-7 columns">Tocar guitarra <br>nunca fue tan fácil</h1>
+    <h1 class="medium-7 columns">Tocar guitarra <br>nunca fue tan fácil</h1>
   </div>
   <div class="row">
-    <h2 class="large-6 columns">Aprende a tocar guitarra con maestros de primera y clases personalizadas en el lugar que quieras.</h2>
+    <h2 class="medium-6 columns">Aprende a tocar guitarra con maestros de primera y clases personalizadas en el lugar que quieras.</h2>
   </div>
   <div class="row">
-    <a  href="#" class="button b-main large-3 columns">Recibe tu primera clase</a>
+    <a  href="#" class="button b-main medium-3 columns">Recibe tu primera clase</a>
   </div>
 </article>
 <!-- Copy -->
-<a href="#" class="button-down"></a>
+<!-- <a href="#" class="button-down"></a> -->
 </main>
 <!-- Principal -->
 
@@ -63,17 +64,17 @@
 <section id="howto-content">
   <div class="bg-guitar"></div>
   <div class="container row">
-    <article class="large-5 columns">
+    <article class="medium-5 columns">
       <h2>Cómo funcionan</h2>
 
         <h3>Maestros de primera</h3>
-          <p>Cuenta con la seguridad tomar lecciones con maestros profesionales que te harán tocar como tú quieras.</p>
+          <p>Cuenta con la seguridad de tomar lecciones con maestros profesionales que te harán tocar como tú quieras.</p>
 
         <h3>Lecciones a domicilio</h3>
           <p>Disfruta de tus clases en el lugar que quieras. Tú eliges donde y nosotros estaremos ahí.</p>
 
         <h3>Video respuesta</h3>
-          <p>¿Olvidaste un ejercio que viste en clase? No hay problema. Tu maestro te enviara una video respuesta para que puedas avanzar en tu progreso semanal.</p>
+          <p>¿Olvidaste un ejercicio que viste en clase? No hay problema. Tu maestro te enviara una video respuesta para que puedas avanzar en tu progreso semanal.</p>
 
         <a href="#" class="button b-black ">Empieza ahora</a>
     </article>
@@ -89,19 +90,63 @@
 <a href="#" class="video-testimonial"></a>
 <div class="container">
   <div class="row">
-    <div class="large-offset-6 large-6 columns">
+    <div class="medium-offset-6 medium-6 columns">
       <h2>Sobre la clases</h2>
-        <h4 class="large-4 columns">4.7/5 <br><br><span>alumnos activos</span></h4>
-        <h4 class="large-4 columns">272 <br><br><span>alumnos activos</span></h4>
-        <h4 class="large-4 columns">92% <br><br><span>han renovado su suscripción</span></h4>
-        <div id="testimonial orbit">
+        <h4 class="medium-4 columns">4.7/5 <br><br><span>alumnos activos</span>
+          <ul class="stars">
+            <li><i class="fi-star"></i></li>
+            <li><i class="fi-star"></i></li>
+            <li><i class="fi-star"></i></li>
+            <li><i class="fi-star"></i></li>
+            <li><i class="fi-star"></i></li>
+          </ul>
+        </h4>
+        <h4 class="medium-4 columns">272 <br><br><span>alumnos activos</span></h4>
+        <h4 class="medium-4 columns">92% <br><br><span>han renovado su suscripción</span></h4>
+        <div id="testimonial">
+          <ul class="bxslider">
+              <li class="testimoniales">
+                <div class="row">
+                  <div class="small-4 columns">
+                    <img src="img/avatar-oscar-barreto.png" alt="hey">
+                  </div>
+                  <div class="small-8 columns">
+                    <p>“Me sirvió para conseguir una ejecución más limpia y enfocada totalmente en la práctica, ¡más allá de la teoría!” <br> <small>Oscar Barreto</small></p>
+                    <ul class="stars">
+                      <li><i class="fi-star"></i></li>
+                      <li><i class="fi-star"></i></li>
+                      <li><i class="fi-star"></i></li>
+                      <li><i class="fi-star"></i></li>
+                      <li><i class="fi-star"></i></li>
+                    </ul>
+                  </div>
+                </div>
+              </li>
+              <li class="testimoniales">
+                <div class="row">
+                  <div class="small-4 columns">
+                    <img src="img/avatar-oscar-barreto.png" alt="hey">
+                  </div>
+                  <div class="small-8 columns">
+                    <p>“Me sirvió para conseguir una ejecución más limpia y enfocada totalmente en la práctica, ¡más allá de la teoría!” <br> <small>Oscar Barreto</small></p>
+                    <ul class="stars">
+                      <li><i class="fi-star"></i></li>
+                      <li><i class="fi-star"></i></li>
+                      <li><i class="fi-star"></i></li>
+                      <li><i class="fi-star"></i></li>
+                      <li><i class="fi-star"></i></li>
+                    </ul>
+                  </div>
+                </div>
+              </li>
 
+          </ul>
         </div>
         <a href="#" class="button b-black">Empieza ahora</a>
     </div>
   </div>
 </div>
-<a href="#" class="button-down"></a>
+<!-- <a href="#" class="button-down"></a> -->
 </section>
 <!-- Historias -->
 
@@ -110,7 +155,7 @@
 <section id="benefits-content">
 <div class="bg-guitar"></div>
   <div class="container row">
-    <article class="large-5 columns">
+    <article class="medium-5 columns">
       <h2>Es muy fácil</h2>
 
         <h3>Horarios flexibles</h3>
@@ -135,7 +180,7 @@
       <div class="column small-10 medium-4">
         <ul class="pricing-table no-bullet text-center">
           <li></li>
-          <li class="title">Básico</li>
+          <li class="title">Regular</li>
           <li class="price">$180.000</li>
           <li class="month">Pesos al mes</li>
           <li class="lessons"> 4 Clases de guitarra</li>
@@ -146,7 +191,7 @@
         </ul>
       </div>
 
-      <div class="column small-6 medium-4">
+      <div class="column small-10 medium-4">
         <ul class="pricing-table no-bullet text-center pricing-star">
           <li class="title">Pro</li>
           <li class="price">$320.000</li>
@@ -159,12 +204,12 @@
         </ul>
       </div>
 
-      <div class="column small-6 medium-4">
+      <div class="column small-10 medium-4">
         <ul class="pricing-table no-bullet text-center">
           <li></li>
-          <li class="title">Premium</li>
+          <li class="title">Curso Básico</li>
           <li class="price">$630.000</li>
-          <li class="month">Pesos al mes</li>
+          <li class="month">Pesos por 4 meses</li>
           <li class="lessons"> 16 Clases de guitarra</li>
           <li> Lecciones a domicilio</li>
           <li> 8 Video respuestas</li>
@@ -186,26 +231,107 @@
 <!-- Preguntas frecuentes -->
 <section id="faqs-content">
   <div class="container row">
+  <h2 class="text-center">¿Tienes preguntas?</h2>
 
-    <h2 class="text-center">¿Tienes preguntas?</h2>
-      <h4>¿Qué significa clases de guitarra personalizadas?</h4>
-      <h4>¿Cuáles son nuestros horarios de clases?</h4>
-      <h4>¿En cuanto tiempo puedo aprender a tocar guitarra?</h4>
-      <h4>¿Es indispensable contar con una guitarra?</h4>
-        <p>Para un mayor avance es necesario que el estudiante cuente con un instrumento propio. En caso de que este no lo tenga se cobrará un recargo adicional por el préstamo de una guitarra en el momento de la clase. Si aún no la has adquirido y quieres comprarla te asesoramos GRATUITAMENTE  por la compra de  cualquiera de nuestros packs ofertados. </p>
-      <h4>¿Qué medios de pago tiene disponibles?</h4>
+    <ul class="vertical menu" data-accordion-menu>
+      <li>
+        <a href="#"><h4>¿Qué significa clases de guitarra personalizadas?</h4></a>
+        <ul class="menu vertical nested">
+          <p>Solo nos centramos en ti! desde la comodidad del lugar que escojas para tus clases de guitarra, tendrás un maestro disponible para ti de acuerdo a tu perfil y música que quieras aprender.</p>
+        </ul>
+      </li>
+      <li><a href="#"><h4>¿Cuáles son nuestros horarios de clases?</h4></a>
+        <ul class="menu vertical nested">
+          <p>De Lunes a Viernes puedes contar con clases desde las 8:00 am hasta 7:00 pm terminando la clase a las 8:00 pm en modalidad presencial. En modalidad virtual puedes agendar tus clases desde las 8:00 am hasta 9:00 pm.</p>
+
+          <p>Los sábados también puedes tomar tus clases en cualquier horario entre las 8:00 am y las 6:00 pm y los domingos desde 8:00 am hasta las 12:00m. Estos horarios aplican tanto a clases presenciales como a clases online.</p>
+        </ul>
+      </li>
+      <li><a href="#"><h4>¿En cuanto tiempo puedo aprender a tocar guitarra?</h4></a>
+        <ul class="menu vertical nested">
+          <p>Clases de guitarra ofrece un curso básico de cuatro meses de duración. Al finalizar el curso podrás tocar los acordes y punteos de tus canciones favoritas y además tendrás la posibilidad de continuar tu proceso en nuestros cursos de nivel intermedio y avanzado donde abordarás canciones con mayor complejidad y aprenderás algunos conceptos musicales según tus gustos e intereses. Desde el primer mes notarás tus avances.</p>
+        </ul>
+      </li>
+      <li><a href="#"><h4>¿Es indispensable contar con una guitarra?</h4></a>
+        <ul class="menu vertical nested">
+          <p>Para un mayor avance es necesario que el estudiante cuente con un instrumento propio. En caso de que este no lo tenga se cobrará un recargo adicional por el préstamo de una guitarra en el momento de la clase. Si aún no la has adquirido y quieres comprarla te asesoramos GRATUITAMENTE  por la compra de  cualquiera de nuestros packs ofertados.</p>
+        </ul>
+      </li>
+      <li><a href="#"><h4>¿Qué medios de pago tiene disponibles?</h4></a>
+        <ul class="menu vertical nested">
+          <p>Contamos con pagos vía tarjeta de credito, efectivo y tarjeta debito a través de PayU</p>
+        </ul>
+      </li>
+    </ul>
+
+  </div>
+  <div class="row container">
+    <a href="#" class="button b-main text-center">Recibe tu primera clase</a>
   </div>
 </section>
 
 <footer>
-  <p class="text-center">© Brain Session 2017 | Términos de sevicio | Politica de privacidad | Ayuda</p>
+<div class="container row">
+  <aside class="medium-3 column">
+    <h5>Compañia</h5>
+      <ul>
+        <li><a href="#">Acerca de Brain Sessions</a></li>
+        <li><a href="#">Prensa</a></li>
+        <li><a href="#">Trabaja con nosotros</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Otros cursos</a></li>
+      </ul>
+  </aside>
+  <aside class="medium-3 column">
+    <h5>Social Media</h5>
+      <ul>
+        <li><a href="#">Youtube</a></li>
+        <li><a href="#">Facebook</a></li>
+        <li><a href="#">Twitter</a></li>
+        <li><a href="#">Instagram</a></li>
+        <li><a href="http://m.me/brainsessions" rel="nofollow">Messenger</a></li>
+      </ul>
+  </aside>
+  <aside class="medium-3 column">
+    <h5>Comunidad</h5>
+      <ul>
+        <li>Acerca</li>
+        <li>Blog</li>
+        <li>Prensa</li>
+        <li>Otros cursos</li>
+        <li><a href="#">Venta de instrumentos</a></li>
+      </ul>
+  </aside>
+  <aside class="medium-3 column">
+    <h5>Contacto</h5>
+      <ul>
+        <li><a href="#">Tel: 319 795 4046</a></li>
+        <li><a href="#">hola@clasesdeguitarra.co</a></li>
+      </ul>
+  </aside>
+
+</div>
+<div class="row container">
+  <img src="img/brain-sessions-white.svg" alt="Brain Sessions Clases De Guitarra" class="brand-center">
+</div>
+
+
+
+  <p class="text-center copyright">© Brain Session 2017 | Términos de servicio | Politica de privacidad | Ayuda</p>
 </footer>
 <!-- Preguntas frecuentes -->
 
 
-    <script src="js/vendor/jquery.js"></script>
-    <script src="js/vendor/what-input.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+    <script src="js/jquery.bxslider.min.js"></script>
     <script src="js/vendor/foundation.js"></script>
     <script src="js/app.js"></script>
+
+    <script type="text/javascript">
+      $(document).ready(function(){
+      $('.bxslider').bxSlider();
+      });
+    </script>
+
   </body>
 </html>
